--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/add-to-project@v0.3.0
         with:
           project-url: 'https://github.com/orgs/altwalker/projects/1'
-          github-token: ${{ secrets.ADD_TO_PROJECT_TOKEN }}
+          github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
