--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
           path: "viewer/dist/"
 
   deploy:
+    needs: build
     runs-on: 'ubuntu-latest'
 
     # if: github.ref == 'refs/heads/main'
