--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Altom Consulting",
   "license": "GPL-3.0",
   "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
