--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,7 @@ jobs:
           VALIDATE_CSS: false
           VALIDATE_PYTHON_BLACK: false
           VALIDATE_PYTHON_MYPY: false
+          VALIDATE_JSCPD: false
           VALIDATE_JAVASCRIPT_STANDARD: false
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
