--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include README.md CONTRIBUTING.rst CHANGELOG.rst LICENSE requirements.txt requirements-dev.txt
-recursive-include altwalker-viewer/src/ *.js *.html *.css *.ico *.svg *.png
+recursive-include altwalker_viewer/dist/ *.js *.js.map *.html *.css *.ico *.svg *.png
