--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -2,5 +2,6 @@ DEFAULT_BRANCH=main
 LINTER_RULES_PATH=/
 VALIDATE_CSS=false
 VALIDATE_JAVASCRIPT_STANDARD=false
+VALIDATE_PYTHON_PYLINT=false
 VALIDATE_PYTHON_BLACK=false
 VALIDATE_PYTHON_MYPY=false
