--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "altwalker-live-viewer",
-  "version": "0.4.2-alpha",
+  "version": "0.4.2",
   "description": "A web application for visualizing the progress of an AltWalker test run.",
   "private": true,
   "scripts": {
