--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -14,5 +14,5 @@ jobs:
     steps:
       - uses: actions/add-to-project@v1.0.2
         with:
-          project-url: 'https://github.com/orgs/altwalker/projects/1'
+          project-url: "https://github.com/orgs/altwalker/projects/1"
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
