--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -5,3 +5,4 @@ VALIDATE_JAVASCRIPT_STANDARD=false
 VALIDATE_PYTHON_BLACK=false
 VALIDATE_PYTHON_MYPY=false
 VALIDATE_PYTHON_PYLINT=false
+VALIDATE_PYTHON_PYINK=false
